# proyecto-final

./: README.md  calculos_k.py  data.py  graficos.py  informe_graficos.md  pyproject.toml
.github/workflows/: ci.yml
2 INFORME POETRY/: teoria_poetry.md
4 MAS TEORIA/: teoriaMas.md
5 IMPLEMENTACIÓN/: calculos_k.py  data.py  graficos.py  informe_graficos.md
6 INFORMES/: informe_final.md
INFORME GIT/: teoria_git.md
INFORME UNIT TESTING/: teoria_unittest.md
MAS/: teoriaMas.md
TAREA2/: calculos_k.py
informes/: informe_final.md
