[project]
name = "proyecto-final"
version = "0.1.0"
description = ""
authors = [
    {name = "CrisbelFerrufino", email = "202505846@est.umss.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
